# tdigest

./: .Rbuildignore  .build.yml  .gitignore  .gitmodules  CMakeLists.txt  CRAN-RELEASE  DESCRIPTION  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.html  README.md  README.qmd  cran-comments.md
.circleci/: config.yml
R/: create.R  tdigest-package.R  util.R
cmake/: UseCodeCoverage.cmake
examples/: CMakeLists.txt  quantile_example.c
inst/: COPYRIGHTS
man/: as.list.tdigest.Rd  print.tdigest.Rd  td_add.Rd  td_create.Rd  td_merge.Rd  td_quantile_of.Rd  td_total_count.Rd  td_value_at.Rd  tdigest.Rd  tick-tdigest-package-tick.Rd  tquantile.Rd
src/: CMakeLists.txt  Makevars  avltree.cpp  avltree.h  init.c  mergingdigest.c  mergingdigest.h  td_malloc.h  tdigest-main.c  tdigest.c  tdigest.cpp  tdigest.h
tests/: CMakeLists.txt  histogram_benchmark.cpp  minunit.h  td_test.c  test-all.R
tests/benchmark/: histogram_benchmark.cpp
tests/testthat/: test-tdigest.R
tests/unit/: minunit.h  td_test.c
