FILE(GLOB c_files "*.c")
FILE(GLOB header_files "*.h")

if (BUILD_SHARED)
    add_library(tdigest SHARED ${c_files} ${header_files})
    target_link_libraries(tdigest m)
    target_include_directories(tdigest SYSTEM PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
    install(TARGETS tdigest DESTINATION lib${LIB_SUFFIX})
endif(BUILD_SHARED)

if (BUILD_STATIC) 
    add_library(tdigest_static STATIC ${c_files} ${header_files}) 
    target_link_libraries(tdigest_static m)
    target_include_directories(tdigest_static SYSTEM PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
    install(TARGETS tdigest_static DESTINATION lib${LIB_SUFFIX})
endif(BUILD_STATIC)
